create loading status

--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -41,6 +41,7 @@ import TreeView from "./assets/trewView.png"
                 id: '2',
                 label: '<h3>First Children</h3>',
                 status: 'none',
+                loading: true,
                 children: [
                   {
                     id: '3',
